Rename DiscordService to be a bit more future-proof. Fix flickering when showing community link.
